--- a/composer.json
+++ b/composer.json
@@ -10,9 +10,12 @@
         "symfony/dotenv": "5.1.*",
         "symfony/flex": "^1.3.1",
         "symfony/framework-bundle": "5.1.*",
+        "symfony/monolog-bundle": "^3.5",
+        "symfony/twig-pack": "^1.0",
         "symfony/yaml": "5.1.*"
     },
     "require-dev": {
+        "sensiolabs/security-checker": "^6.0"
     },
     "config": {
         "optimize-autoloader": true,
@@ -43,7 +46,8 @@
     "scripts": {
         "auto-scripts": {
             "cache:clear": "symfony-cmd",
-            "assets:install %PUBLIC_DIR%": "symfony-cmd"
+            "assets:install %PUBLIC_DIR%": "symfony-cmd",
+            "security-checker security:check": "script"
         },
         "post-install-cmd": [
             "@auto-scripts"
