--- a/composer.json
+++ b/composer.json
@@ -6,7 +6,9 @@
         "ext-ctype": "*",
         "ext-iconv": "*",
         "sensio/framework-extra-bundle": "^5.5",
+        "symfony/asset": "5.1.*",
         "symfony/console": "5.1.*",
+        "symfony/debug-pack": "^1.0",
         "symfony/dotenv": "5.1.*",
         "symfony/flex": "^1.3.1",
         "symfony/framework-bundle": "5.1.*",
@@ -15,7 +17,8 @@
         "symfony/yaml": "5.1.*"
     },
     "require-dev": {
-        "sensiolabs/security-checker": "^6.0"
+        "sensiolabs/security-checker": "^6.0",
+        "symfony/profiler-pack": "^1.0"
     },
     "config": {
         "optimize-autoloader": true,
