--- a/composer.json
+++ b/composer.json
@@ -15,6 +15,7 @@
         "symfony/framework-bundle": "5.1.*",
         "symfony/monolog-bundle": "^3.5",
         "symfony/twig-pack": "^1.0",
+        "symfony/webpack-encore-bundle": "^1.7",
         "symfony/yaml": "5.1.*"
     },
     "require-dev": {
